--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'docs/glai'
+          path: 'docs/handlers'
 
       - name: Deploy to GitHub Pages
         id: deployment
