--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'docs/util_handlers'
+          path: 'docs/util_helper'
 
       - name: Deploy to GitHub Pages
         id: deployment
